@@ -50,9 +50,15 @@ rfactor.default <- function(x, lband, uband, na.rm=TRUE, ...)  {
         
     # Getting the row index in 'q95' of all the observations that are within L95PPU and U95PPU
     dfactor <- mean(uband - lband, na.rm=na.rm)
+    
+    denominator <- sd(x, na.rm=na.rm) 
      
-    # Getting the best simulated streamflows (skipping days withoud measurements)
-    rfactor <- dfactor / sd(x, na.rm=na.rm) 
+    if (denominator != 0) {
+      rfactor <- dfactor / denominator
+    } else {
+         rfactor <- NA 
+         warning("'sd(x)=0', it is not possible to compute 'rfactor'") 
+      } # ELSE end
     
     return( rfactor )
 
